# fp-emulation

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: lint.yml
hw/: flake.nix
hw/rtl/: mac.sv  mac_fp64.sv  mac_sr.sv  pwl.sv  pwl_mlplac.sv  slope_mul.sv  slope_shift.sv
hw/sim/: Makefile  tb_mac.py  tb_mac_sr.py  tb_pwl.py  tb_slope.py
hw/synth/: Makefile  plot.py
notebooks/: 01_fp.ipynb  02_ozaki.ipynb  03_mlplac.ipynb  04_demo.ipynb  05_dt_pinn.ipynb  06_sr.ipynb  reference.py
python/: 01_fp.ipynb  02_ozaki.ipynb  03_mlplac.ipynb  fp_trace.py  mlplac.py  ozaki1.py
python/.ipynb_checkpoints/: 01_fp-checkpoint.ipynb  03_mlplac-checkpoint.ipynb
rtl/: mac.sv
src/fp_emulation/: __init__.py  _cpu_crt.py  _cuda_crt.py  _triton_crt.py  mlplac.py  nn.py  ozaki.py
src/fp_emulation/csrc/: crt_kernel.cu  crt_reconstruct.cpp
tests/: conftest.py  test_mlplac.py  test_nn.py  test_ozaki.py
