[project]
name = "fp-emulation"
version = "0.1.0"
description = "High-precision floating-point emulation via low-precision integer ops (Ozaki, ML-PLAC)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
notebooks = [
    "matplotlib>=3.7",
    "jupyter",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
