[project]
name = "fp-emulation"
version = "0.1.0"
description = "High-precision floating-point emulation via low-precision integer ops (Ozaki, ML-PLAC)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "torch>=2.1",
    "ninja",
]

[project.optional-dependencies]
notebooks = [
    "matplotlib>=3.7",
    "jupyter",
]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fp_emulation = ["csrc/*.cu", "csrc/*.cpp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
